# dwrench

./: .gitignore  Cargo.toml  README.md  ci.sh  generate_readme.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs  lib.rs
